# mkit-response_trimming

./: .gitignore  README.md  exception.py  http_manager.py  logging.yaml  pyproject.toml
src/: deps.py  main.py
src/api/: __init__.py
src/api/v1/: rtr_digipos.py
src/config/: __init__.py  cfg_api.py  cfg_api_base.py  cfg_api_digipos.py  cfg_logging.py  cfg_shared.py  settings.py
src/core/: http_manager.py  http_utils.py
src/custom/: exceptions.py  middlewares.py
src/domain/digipos/: dg_repos.py  rep_account.py  sch_config.py  sch_request.py  srv_account.py
src/domain/digipos/schemas/: cfg_digipos.py
src/repos/: rep_digipos.py
src/services/clients/: base_client.py  client_digipos.py
src/services/digipos/: srv_digipos.py
src/utils/: client_utils.py
